--- a/webapp/styles.css
+++ b/webapp/styles.css
@@ -1,3 +1,15 @@
 html {
     background: #2d2e2e
 }
+
+.avatar {
+    margin: 0 auto;
+    width: 174px;
+    height: 174px;
+}
+
+.avatar__photo {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
