res-8 webpack config

--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'Lato';
-    src: url('fonts/Lato-Regular.eot');
-    src: url('fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'),
-        url('fonts/Lato-Regular.woff2') format('woff2'),
-        url('fonts/Lato-Regular.woff') format('woff'),
-        url('fonts/Lato-Regular.ttf') format('truetype');
+    font-family: "Lato";
+    src: url("#{$font-path}/Lato-Regular.eot");
+    src: url("#{$font-path}/Lato-Regular.eot?#iefix") format("embedded-opentype"),
+    url("#{$font-path}/Lato-Regular.woff2") format("woff2"),
+    url("#{$font-path}/Lato-Regular.woff") format("woff"),
+    url("#{$font-path}/Lato-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
@@ -43,14 +43,14 @@ html {
     font-weight: 700;
     font-size: 40px;
     margin: -2px auto;
-    font-family: 'Lato';
+    font-family: "Lato";
 }
 
 .profile-text__profession {
     font-weight: 300;
     margin: 15px auto;
     color: #979899;
-    font-family: 'Lato';    
+    font-family: "Lato";
 }
 
 .social-media-links {
