--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -1,3 +1,16 @@
+$font-path: '../assets/fonts';
+
+@font-face {
+  font-family: "Lato";
+  src: url("#{$font-path}/Lato-Regular.eot");
+  src: url("#{$font-path}/Lato-Regular.eot?#iefix") format("embedded-opentype"),
+  url("#{$font-path}/Lato-Regular.woff2") format("woff2"),
+  url("#{$font-path}/Lato-Regular.woff") format("woff"),
+  url("#{$font-path}/Lato-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   background: #2d2e2e
 }
@@ -78,4 +91,35 @@ html {
   border: 1px solid #c0c0c0;
   background-color: #2d2e2e;
   opacity: 0.8;
+}
+
+
+.contacts {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  margin-top: 15px;
+}
+
+.contacts__contact {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  color: #a4a5a6;
+  margin: 15px;
+  font-weight: bold;
+}
+
+.contacts__contact-info {
+  margin: 15px;
+  font-weight: normal;
+}
+
+.contacts__contact-info a {
+  text-decoration: none;
+  color: #a4a5a6;
+}
+
+.contacts__contact-info:hover a {
+  color: #ffd700;
 }
