RES-17 css to scss, fix scss variable names, fix font path

--- a/webapp/src/scss/abstracts/_colors.scss
+++ b/webapp/src/scss/abstracts/_colors.scss
@@ -1,9 +1,8 @@
 $color-primary: #2d2e2e;
-$color-text-main: #a4a5a6;
+$color-secondary-accent: #ffd700;
+$color-light-accent: #c0c0c0;
 $color-dark-gray: #282929;
+$color-dark-light: #696969;
+$color-text-main: #a4a5a6;
 $color-text-second: #e0a80d;
 $color-text-third: #979899;
-$color-social-icon: #696969;
-$color-text-social-icon: #c0c0c0;
-$color-fab-social-icon: #ffd700;
-$color-border-social-icon: #c0c0c0;
