--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -4,15 +4,15 @@
     margin: 0 auto;
     width: 174px;
     height: 174px;
-
-    &__photo {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-    }
   }
 
-  .profile__content {
+  &__photo {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+
+  &__content {
     display: flex;
     flex-direction: column;
   }
@@ -30,14 +30,12 @@
     font-weight: 700;
     font-size: 40px;
     margin: -2px auto;
-    font-family: "Lato";
   }
 
   &__profession {
     font-weight: 300;
     margin: 15px auto;
     color: #979899;
-    font-family: "Lato";
   }
 }
 
