--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -1,18 +1,8 @@
-@import "abstracts/colors.scss";
+/* BASE */
+@import "base/typography";
+@import "base/common";
 
-$font-path: '../assets/fonts';
-
-@font-face {
-  font-family: "Lato";
-  src: url("#{$font-path}/Lato-Regular.eot");
-  src: url("#{$font-path}/Lato-Regular.eot?#iefix") format("embedded-opentype"),
-  url("#{$font-path}/Lato-Regular.woff2") format("woff2"),
-  url("#{$font-path}/Lato-Regular.woff") format("woff"),
-  url("#{$font-path}/Lato-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-html {
-  background: $color-primary;
-}
+/* COMPONENTS */
+@import "components/contacts";
+@import "components/profile";
+@import "components/social-media-links";
