RES-15 Add fontawesome lib to project

--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -1,5 +1,8 @@
-/* BASE */
+/* TYPOGRAPHY */
+@import '~@fortawesome/fontawesome-free/css/all.css';
 @import "base/typography";
+
+/* BASE */
 @import "base/common";
 
 /* COMPONENTS */
