--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -1,21 +1,20 @@
-.profile {
+@import "../abstracts/colors";
 
-  &__avatar {
-    margin: 0 auto;
-    width: 174px;
-    height: 174px;
-  }
+.avatar {
+  margin: 0 auto;
+  width: 174px;
+  height: 174px;
 
   &__photo {
     width: 100%;
     height: 100%;
     border-radius: 50%;
   }
+}
 
-  &__content {
-    display: flex;
-    flex-direction: column;
-  }
+.personal-data {
+  display: flex;
+  flex-direction: column;
 
   &__name {
     font-weight: 300;
@@ -36,6 +35,71 @@
     font-weight: 300;
     margin: 15px auto;
     color: #979899;
+  }
+}
+
+.contacts {
+  display: grid;
+  justify-items: center;
+  margin-top: 15px;
+
+  @media (min-width: 1200px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  @media (min-width: 992px) and (max-width: 1199px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width: 991px) {
+    grid-template-columns: 1fr;
+  }
+
+  &__contact {
+    display: grid;
+    color: $color-text-main;
+    margin: 15px;
+    font-weight: bold;
+
+    @media (min-width: 1200px) {
+      justify-items: start;
+    }
+
+    @media (min-width: 992px) and (max-width: 1199px) {
+      justify-items: center;
+    }
+
+    @media (max-width: 991px) {
+      grid-template-columns: 1fr;
+      justify-items: center;
+    }
+
+    &-info {
+      font-weight: normal;
+
+      @media (min-width: 1200px) {
+        margin: 0;
+        padding-top: 15px;
+      }
+
+      @media (min-width: 992px) and (max-width: 1199px) {
+        margin: 0;
+        padding-top: 15px;
+      }
+
+      @media (max-width: 991px) {
+        margin: 15px;
+      }
+
+      & a {
+        text-decoration: none;
+        color: $color-text-main;
+      }
+
+      &:hover a {
+        color: $color-secondary-accent;
+      }
+    }
   }
 }
 
