--- a/webapp/src/scss/components/_social-media-links.scss
+++ b/webapp/src/scss/components/_social-media-links.scss
@@ -1,6 +1,6 @@
 @import "../abstracts/colors";
 
-.social-media-links {
+.social-links {
   display: flex;
   justify-content: center;
   font-size: 25px;
