--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -4,7 +4,7 @@
 
 /* BASE */
 @import "base/common";
+@import "base/layout";
 
 /* COMPONENTS */
-@import "components/profile";
-@import "components/social-media-links";
+@import "src/scss/components/profile";
