--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -30,19 +30,19 @@
             </div>
             <div class="contacts">
                 <div class="contacts__contact">
-                    <div class="contacts__contact-name">Location</div>
+                    <div class="contacts__contact-name">{{location}}</div>
                     <div class="contacts__contact-info">Portland, OR</div>
                 </div>
                 <div class="contacts__contact">
-                    <div class="contacts__contact-name">Phone</div>
+                    <div class="contacts__contact-name">{{phone}}</div>
                     <div class="contacts__contact-info">534.456.886</div>
                 </div>
                 <div class="contacts__contact">
-                    <div class="contacts__contact-name">Web</div>
+                    <div class="contacts__contact-name">{{web}}</div>
                     <div class="contacts__contact-info">ruventhemes.com</div>
                 </div>
                 <div class="contacts__contact">
-                    <div class="contacts__contact-name">Email</div>
+                    <div class="contacts__contact-name">{{email}}</div>
                     <div class="contacts__contact-info">hello@example.com</div>
                 </div>
             </div>
