RES-25 add header in intro section

--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -48,6 +48,14 @@
             </div>
         </div>
     </div>
+    <div class="intro-container container">
+        <div class="section">
+            <div class="section__header">
+                <h4 class="section__header-name">{{INTRO}}</h4>
+                <p class="section__header-description">What I am all about</p>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
