RES-40 fix grid layout
   - fixed 3, 4, 5

--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -18,14 +18,14 @@
         <div class="section__content">
             <div class="profile">
                 <div class="personal-data">
-                    <p class="personal-data__name">desmond</p>
-                    <p class="personal-data__surname">rambowski</p>
-                    <p class="personal-data__profession">Web Developer & Front-end Expert</p>
-                </div>
-                <div class="social-links">
-                    <a class="social-links__link" href="#"><i class="social-links__icon fab fa-facebook-f"></i></a>
-                    <a class="social-links__link" href="#"><i class="social-links__icon fab fa-dribbble"></i></a>
-                    <a class="social-links__link" href="#"><i class="social-links__icon fab fa-twitter"></i></a>
+                    <div class="personal-data__name">desmond</div>
+                    <div class="personal-data__surname">rambowski</div>
+                    <div class="personal-data__profession">Web Developer & Front-end Expert</div>
+                    <div class="personal-data__links">
+                        <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-facebook-f"></i></a>
+                        <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-dribbble"></i></a>
+                        <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-twitter"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="contacts">
