--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -1,89 +1,122 @@
 @import "../abstracts/colors";
 @import "../abstracts/variables";
 
-// TODO refactor this file
-
 .profile-container {
   .section {
     &__header {
+      position: relative;
+      text-align: center;
       padding-top: 100px;
+    }
+
+    &__content {
+      @media (min-width: $lg-screen-breakpoint) {
+        height: 100vh;
+        display: grid;
+        grid-template-rows: minmax(350px, auto) 145px;
+      }
     }
   }
 }
 
 .avatar {
-  text-align: center;
+  display: inline-block;
+  width: 240px;
+  height: 240px;
 
   @media (min-width: $lg-screen-breakpoint) {
-    text-align: right;
+    position: absolute;
+    top: 50%;
+    right: 70px;
+    margin-top: -120px;
   }
 
   &__photo {
     border-radius: 50%;
+    width: 100%;
   }
 }
 
 .profile {
-  display: grid;
-  margin-bottom: 100px;
-  margin-top: 100px;
-  text-align: right;
+  text-align: center;
 
-  @media screen and (min-width: 1200px) {
-    grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+  @media (min-width: $lg-screen-breakpoint) {
+    text-align: left;
   }
 }
 
 .personal-data {
+  position: relative;
+
+  @media (min-width: $lg-screen-breakpoint) {
+    margin-top: 50vh;
+    transform: translateY(-50%);
+  }
+
   &__name {
     color: #a4a5a6;
     font-size: 50px;
-    margin-bottom: 0;
-    line-height: 30px;
-
-    @media screen and (min-width: 992px) {
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      text-align: center;
-      margin: 0 auto;
-    }
-
-    @media screen and (min-width: 768px) {
-      width: 80%;
-      text-align: center;
-      margin: 0 auto;
-    }
-
-    @media screen and (max-width: 992px) {
-      margin: 0 auto;
-      width: 250px;
-    }
   }
 
   &__surname {
     font-size: 60px;
     text-transform: uppercase;
     color: #e0a80d;
-    margin-top: 10px;
-    margin-bottom: 0;
-    text-align: center;
-
-    @media screen and (min-width: 768px) {
-      width: 70%;
-      text-align: center;
-      margin: 0 auto;
-    }
   }
 
   &__profession {
     font-size: 16px;
     color: #a4a5a6;
-    text-align: center;
+  }
 
-    @media screen and (min-width: 768px) {
-      width: 80%;
-      text-align: center;
-      margin: 0 auto;
+  &__links {
+    display: flex;
+    justify-content: space-between;
+    width: 130px;
+    margin: 20px auto 0 auto;
+    font-size: 25px;
+    cursor: pointer;
+
+    @media (min-width: $lg-screen-breakpoint) {
+      position: absolute;
+      bottom: 0;
+      right: 0;
     }
+  }
+
+  &__link {
+    width: 38px;
+    height: 38px;
+    background-color: $color-dark-light;
+    opacity: 0.9;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    text-decoration: none;
+    position: relative;
+
+    @media (min-width: $lg-screen-breakpoint) {
+      float: right;
+    }
+
+    &:hover {
+      border: 1px solid $color-light-accent;
+      background-color: $color-primary;
+      opacity: 0.8;
+
+      & .fab {
+        color: $color-secondary-accent;
+      }
+    }
+  }
+
+  &__link-icon {
+    font-size: 20px;
+    align-items: center;
+    color: $color-light-accent;
+    vertical-align:  middle;
+    position: absolute;
+    left: 6px;
+    top: 8px;
   }
 }
 
@@ -116,58 +149,6 @@
 
     &-info {
       font-weight: normal;
-    }
-  }
-}
-
-.social-links {
-  font-size: 25px;
-  cursor: pointer;
-  display: grid;
-  grid-template-columns: 33px 33px 33px;
-
-  @media screen and (min-width: 992px) {
-    margin: 20px auto;
-  }
-
-  @media screen and (min-width: 768px) {
-    margin: 20px auto;
-  }
-
-  @media screen and (max-width: 768px) {
-    margin: 0 auto;
-  }
-
-  &__icon {
-    font-size: 20px;
-    align-items: center;
-    color: $color-light-accent;
-    vertical-align:  middle;
-    position: absolute;
-    left: 6px;
-    top: 8px;
-  }
-
-  &__link {
-    margin-right: 10px;
-    display: block;
-    width: 30px;
-    height: 30px;
-    background-color: $color-dark-light;
-    opacity: 0.9;
-    border: 1px solid transparent;
-    border-radius: 2px;
-    text-decoration: none;
-    position: relative;
-
-    &:hover {
-      border: 1px solid $color-light-accent;
-      background-color: $color-primary;
-      opacity: 0.8;
-
-      & .fab {
-        color: $color-secondary-accent;
-      }
     }
   }
 }
