--- a/webapp/src/scss/abstracts/_colors.scss
+++ b/webapp/src/scss/abstracts/_colors.scss
@@ -3,6 +3,7 @@ $color-secondary-accent: #ffd700;
 $color-light-accent: #c0c0c0;
 $color-dark-gray: #282929;
 $color-dark-light: #696969;
+$color-dark-accent: #404242;
 $color-text-main: #a4a5a6;
 $color-text-second: #e0a80d;
 $color-text-third: #979899;
