RES-25 RES-36 Add header and intro section

--- a/webapp/src/scss/abstracts/_variables.scss
+++ b/webapp/src/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $font-path: '../assets/fonts';
 
+$xs-screen-breakpoint: 600px;
 $sm-screen-breakpoint: 768px;
 $md-screen-breakpoint: 992px;
 $lg-screen-breakpoint: 1200px;
