--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -48,13 +48,16 @@
             </div>
         </div>
     </div>
-    <div class="intro-container container">
-        <div class="section">
-            <div class="section__header">
-                <h4 class="section__header-name">{{INTRO}}</h4>
-                <p class="section__header-description">What I am all about</p>
-            </div>
+</div>
+
+<!-- INTRO -->
+<div class="intro-container container">
+    <div class="section">
+        <div class="section__header">
+            <div class="section__header-title">{{intro.title}}</div>
+            <div class="section__header-description">{{intro.description}}</div>
         </div>
+        <div class="section__content">{{intro.content}}</div>
     </div>
 </div>
 </body>
