--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -6,14 +6,16 @@
     &__header {
       position: relative;
       text-align: center;
-      padding-top: 100px;
+
+      @media (min-width: $md-screen-breakpoint) {
+        text-align: right;
+      }
     }
 
     &__content {
-      @media (min-width: $lg-screen-breakpoint) {
-        height: 100vh;
+      @media (min-width: $md-screen-breakpoint) {
         display: grid;
-        grid-template-rows: minmax(350px, auto) 145px;
+        grid-template-rows: minmax(400px, calc(100vh - 145px)) 145px;
       }
     }
   }
@@ -24,11 +26,9 @@
   width: 240px;
   height: 240px;
 
-  @media (min-width: $lg-screen-breakpoint) {
-    position: absolute;
-    top: 50%;
-    right: 70px;
-    margin-top: -120px;
+  @media (min-width: $md-screen-breakpoint) {
+    margin-top: 50vh;
+    transform: translateY(-50%);
   }
 
   &__photo {
@@ -40,7 +40,7 @@
 .profile {
   text-align: center;
 
-  @media (min-width: $lg-screen-breakpoint) {
+  @media (min-width: $md-screen-breakpoint) {
     text-align: left;
   }
 }
@@ -48,7 +48,7 @@
 .personal-data {
   position: relative;
 
-  @media (min-width: $lg-screen-breakpoint) {
+  @media (min-width: $md-screen-breakpoint) {
     margin-top: 50vh;
     transform: translateY(-50%);
   }
@@ -77,7 +77,7 @@
     font-size: 25px;
     cursor: pointer;
 
-    @media (min-width: $lg-screen-breakpoint) {
+    @media (min-width: $md-screen-breakpoint) {
       position: absolute;
       bottom: 0;
       right: 0;
@@ -94,7 +94,7 @@
     text-decoration: none;
     position: relative;
 
-    @media (min-width: $lg-screen-breakpoint) {
+    @media (min-width: $md-screen-breakpoint) {
       float: right;
     }
 
@@ -120,17 +120,16 @@
 }
 
 .contacts {
-  width: 80%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
   border-top: 2px solid $color-dark-accent;
 
-  @media (min-width: $md-screen-breakpoint) {
+  @media (min-width: $xs-screen-breakpoint) {
     grid-template-columns: 1fr 1fr;
   }
 
-  @media (min-width: $lg-screen-breakpoint) {
+  @media (min-width: $sm-screen-breakpoint) {
     width: 100%;
     margin: 0;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -144,10 +143,9 @@
     margin-top: 15px;
     font-size: 14px;
 
-    @media (min-width: $lg-screen-breakpoint) {
+    @media (min-width: $sm-screen-breakpoint) {
       text-align: left;
     }
-
 
     &-name {
       margin-bottom: 12px;
@@ -204,32 +202,6 @@
       & .fab {
         color: $color-secondary-accent;
       }
-    }
-  }
-}
-
-.intro-container {
-  .section {
-    border-top: 1px solid #404242;
-    border-bottom: 1px solid #404242;
-
-    @media (min-width: $lg-screen-breakpoint) {
-      border-top: 0;
-      border-bottom: 0;
-    }
-
-    &__header {
-      display: grid;
-      justify-items: start;
-      padding-top: 30px;
-      padding-left: 30px;
-      color: $color-text-main;
-      //background-color: #292a2a;
-
-      @media (min-width: $lg-screen-breakpoint) {
-        justify-items: end;
-      }
-
     }
   }
 }
