RES-25 [fix] Fix layout for extra small screen

--- a/webapp/src/scss/base/_common.scss
+++ b/webapp/src/scss/base/_common.scss
@@ -1,7 +1,7 @@
 @import "../abstracts/colors";
 
 html {
-  display: flex;
+  display: grid; // TODO fix layout for extra small screen
   font-family: 'Lato', sans-serif;
   background-color: $color-primary;
 }
