res-32 add locals styles

--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -9,3 +9,4 @@
 /* COMPONENTS */
 @import "src/scss/components/profile";
 @import "src/scss/components/intro";
+@import "src/scss/components/locals";
