res-32 fix locals

--- a/webapp/src/scss/abstracts/_variables.scss
+++ b/webapp/src/scss/abstracts/_variables.scss
@@ -4,3 +4,5 @@ $xs-screen-breakpoint: 600px;
 $sm-screen-breakpoint: 768px;
 $md-screen-breakpoint: 992px;
 $lg-screen-breakpoint: 1200px;
+
+$toggle-width: 23px;
