res-32 fix locals names

--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -9,9 +9,9 @@
 <body>
 <!-- LOCALS -->
 <div class="container">
-<div class="language-toggles">
+<div class="locals">
     {{#each locals}}
-    <div class="language-toggles__toggle {{#if this.active}}active{{/if}}">{{this.name}}</div>
+    <div class="locals-language-btn {{#if this.active}}active{{/if}}">{{this.name}}</div>
     {{/each}}
 </div>
 </div>
