--- a/webapp/src/scss/components/_locals.scss
+++ b/webapp/src/scss/components/_locals.scss
@@ -1,13 +1,13 @@
 @import "../abstracts/colors";
 @import "../abstracts/variables";
 
-.language-toggles{
+.locals{
   display: grid;
   grid-template-columns: $toggle-width, $toggle-width;
   float: right;
   gap: 10px;
 
-  &__toggle {
+  &-language-btn {
     color: white;
     text-align: right;
     font-size: 20px;
@@ -17,4 +17,4 @@
 .active {
   color: $color-text-second;
   border-bottom: 2px solid $color-text-second;
-}
+} 
