--- a/webapp/src/scss/components/_locals.scss
+++ b/webapp/src/scss/components/_locals.scss
@@ -2,19 +2,22 @@
 @import "../abstracts/variables";
 
 .locals{
-  display: grid;
-  grid-template-columns: $toggle-width, $toggle-width;
+  display: flex;
   float: right;
   gap: 10px;
 
-  &-language-btn {
+  &__language-btn {
     color: white;
     text-align: right;
     font-size: 20px;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &_active {
+      color: $color-text-second;
+      border-bottom: 2px solid $color-text-second;
+    }
   }
 }
-
-.active {
-  color: $color-text-second;
-  border-bottom: 2px solid $color-text-second;
-} 
