--- a/webapp/src/scss/components/_profile.scss
+++ b/webapp/src/scss/components/_profile.scss
@@ -9,6 +9,7 @@
 
       @media (min-width: $md-screen-breakpoint) {
         text-align: right;
+        padding-left: 0;
       }
     }
 
@@ -104,7 +105,7 @@
       opacity: 0.8;
 
       & .fab {
-        color: $color-secondary-accent;
+        color: $color-text-second;
       }
     }
   }
@@ -200,7 +201,7 @@
       opacity: 0.8;
 
       & .fab {
-        color: $color-secondary-accent;
+        color: $color-text-second;
       }
     }
   }
