RES-52 Add experience section (header and content)

--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -9,5 +9,6 @@
 /* COMPONENTS */
 @import "src/scss/components/profile";
 @import "src/scss/components/intro";
+@import "src/scss/components/experience";
 @import "src/scss/components/locals";
 @import "src/scss/components/skills";
