--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -12,7 +12,9 @@
 <div class="container">
     <div id="language-switcher" class="locals">
         {{#each locals}}
-        <div class="locals__language-btn {{#if this.active}}locals__language-btn_active{{/if}}" data-local="{{this.local}}">{{this.name}}</div>
+        <div class="locals__language-btn {{#if this.active}}locals__language-btn_active{{/if}}"
+             data-local="{{this.local}}">{{this.name}}
+        </div>
         {{/each}}
     </div>
 </div>
@@ -32,7 +34,8 @@
                     <div class="personal-data__surname">rambowski</div>
                     <div class="personal-data__profession">Web Developer & Front-end Expert</div>
                     <div class="personal-data__links">
-                        <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-facebook-f"></i></a>
+                        <a class="personal-data__link" href="#"><i
+                                class="personal-data__link-icon fab fa-facebook-f"></i></a>
                         <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-dribbble"></i></a>
                         <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-twitter"></i></a>
                     </div>
@@ -102,6 +105,60 @@
             <div class="skill-section">
                 <img src="assets/img/sass.svg" alt="" class="skill-section__img">
                 <h3 class="skill-section__title">sass</h3>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- EXPERIENCE  -->
+<div class="experience-container container">
+    <div class="section">
+        <div class="section__header">
+            <div class="section__header-title">EXPERIENCE</div>
+            <div class="section__header-description">Yes. I've been around</div>
+        </div>
+        <div class="section__content">
+            <div class="section__content-block">
+                <div class="section__content-header">
+                    <div class="circle"></div>
+                    <div class="section__content-period">2015 - Present</div>
+                    <div class="section__content-organisation">UNICORN INCUBATOR INC.</div>
+                    <div class="section__content-position">Senior Interface Designer</div>
+                    <div class="section__content-city">Portland, OR</div>
+                </div>
+                <div class="section__content-description">Consectetuer adipiscing elit. Phasellus hendrerit.
+                    Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed
+                    pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu
+                    nibh. Nullam mollis. Ut justo. Suspendisse potenti.
+                </div>
+            </div>
+            <div class="section__content-block">
+                <div class="section__content-header">
+                    <div class="circle"></div>
+                    <div class="section__content-period">2013 - 2015</div>
+                    <div class="section__content-organisation">CALIFORNIA DESIGN BUREAU</div>
+                    <div class="section__content-position">Creative Director</div>
+                    <div class="section__content-city">Cupertino, CA</div>
+                </div>
+                <div class="section__content-description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                    Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id,
+                    mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget
+                    blandit nunc tortor eu nibh. Nullam mollis.
+                </div>
+            </div>
+            <div class="section__content-block">
+                <div class="section__content-header">
+                    <div class="circle"></div>
+                    <div class="section__content-period">2010 - 2013</div>
+                    <div class="section__content-organisation">DREAMLAND CREATIVE</div>
+                    <div class="section__content-position">Front-end Designer</div>
+                    <div class="section__content-city">New York, NY</div>
+                </div>
+                <div class="section__content-description">Fusce lacinia arcu et nulla. Nulla vitae mauris non felis
+                    mollis faucibus. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet
+                    vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero
+                    sodales leo, eget blandit nunc tortor eu nibh.
+                </div>
             </div>
         </div>
     </div>
