res-51 Create skills section

--- a/webapp/src/scss/base/_layout.scss
+++ b/webapp/src/scss/base/_layout.scss
@@ -25,6 +25,16 @@ $sm-section-padding: 50px;
   &__header {
     background-color: $color-primary;
     padding: $xs-section-padding;
+    border-top: 1px solid $color-dark-accent;
+    border-bottom: 1px solid $color-dark-accent;
+    text-align: left;
+    color: $color-text-main;
+    line-height: 1.75;
+
+    &-title {
+      text-transform: uppercase;
+      font-weight: bold;
+    }
 
     @media (min-width: $sm-screen-breakpoint) {
       padding: $sm-section-padding;
@@ -32,6 +42,9 @@ $sm-section-padding: 50px;
 
     @media (min-width: $md-screen-breakpoint) {
       padding-right: $default-padding;
+      border-top: 0;
+      border-bottom: 0;
+      text-align: right;
     }
   }
 
