--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -70,5 +70,41 @@
         <div class="section__content">{{intro.content}}</div>
     </div>
 </div>
+
+<!-- SKILLS -->
+<div class="skills-container container">
+    <div class="section">
+        <div class="section__header">
+            <div class="section__header-title">{{skills.title}}</div>
+        </div>
+        <div class="section__content">
+            <div class="skill-section">
+                <img src="assets/img/js.svg" alt="" class="skill-section__img">
+                <h3 class="skill-section__title">js5/js6</h3>
+            </div>
+            <div class="skill-section">
+                <img src="assets/img/git.svg" alt="" class="skill-section__img">
+                <h3 class="skill-section__title">git</h3>
+            </div>
+            <div class="skill-section">
+                <img src="assets/img/css.svg" alt="" class="skill-section__img">
+                <h3 class="skill-section__title">css</h3>
+            </div>
+            <div class="skill-section">
+                <img src="assets/img/ts.svg" alt="" class="skill-section__img">
+                <h3 class="skill-section__title">typescript</h3>
+
+            </div>
+            <div class="skill-section">
+                <img src="assets/img/node.svg" alt="" class="skill-section__img">
+                <h3 class="skill-section__title">node js</h3>
+            </div>
+            <div class="skill-section">
+                <img src="assets/img/sass.svg" alt="" class="skill-section__img">
+                <h3 class="skill-section__title">sass</h3>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
