--- a/webapp/src/scss/abstracts/_colors.scss
+++ b/webapp/src/scss/abstracts/_colors.scss
@@ -6,3 +6,4 @@ $color-dark-accent: #404242;
 $color-text-main: #a4a5a6;
 $color-text-second: #e0a80d;
 $color-text-third: #979899;
+$color-lightest : #ffffff;
