--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -10,3 +10,4 @@
 @import "src/scss/components/profile";
 @import "src/scss/components/intro";
 @import "src/scss/components/locals";
+@import "src/scss/components/skills";
