--- a/webapp/src/scss/components/_experience.scss
+++ b/webapp/src/scss/components/_experience.scss
@@ -3,71 +3,14 @@
 
 .experience-container {
   .section {
-    &__header {
-      border-top: 1px solid $color-dark-accent;
-      border-bottom: 1px solid $color-dark-accent;
-      text-align: left;
-      color: $color-text-main;
-      line-height: 1.75;
-
-      &-title {
-        font-weight: bold;
-      }
-
-      @media (min-width: $md-screen-breakpoint) {
-        border-top: 0;
-        border-bottom: 0;
-        text-align: right;
-      }
-    }
-
     &__content {
-      display: grid;
-      gap: 10px;
+      padding-bottom: 0;
 
-      &-block {
-        display: grid;
-        position: relative;
-        border-left: 1px solid $color-dark-accent;
-        padding-bottom: 20px;
-        padding-left: 15px;
-        color: $color-text-main;
-        line-height: 1.75;
-        text-align: justify;
-
-        @media (min-width: $sm-screen-breakpoint) {
-          grid-template-columns: 1fr 1fr;
-        }
-
-        .section__content-period {
-          opacity: .6;
-          font-size: 0.7rem;
-        }
-
-        .section__content-organisation {
-          font-weight: bold;
-        }
-
-        .section__content-position {
-          font-size: 0.7rem;
-        }
-
-        .section__content-city {
-          opacity: .6;
-          font-size: 0.7rem;
+      .timeline-section {
+        &:last-child {
+          padding-bottom: 0;
         }
       }
-
-      .circle {
-        position: absolute;
-        left: 0;
-        margin-left: -5px;
-        width: 10px;
-        height: 10px;
-        background-color: $color-text-second;
-        border-radius: 50%;
-      }
-
     }
   }
 }
