create contact section

--- a/webapp/src/scss/styles.scss
+++ b/webapp/src/scss/styles.scss
@@ -16,3 +16,4 @@
 @import "src/scss/components/locals";
 @import "src/scss/components/timelines";
 @import "src/scss/components/skills";
+@import "src/scss/components/contact";
