--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -133,5 +133,49 @@
         </div>
     </div>
 </div>
+
+<!-- CONTACT  -->
+<div class="contact-container container">
+    <div class="section">
+        <div class="section__header">
+            <div class="section__header-title">desmond</div>
+            <div class="section__header-description">desmond</div>
+        </div>
+        <div class="section__content">
+            <div class="contacts">
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">{{location}}</div>
+                    <div class="contacts__contact-info">Portland, OR</div>
+                </div>
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">{{phone}}</div>
+                    <div class="contacts__contact-info">534.456.886</div>
+                </div>
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">{{web}}</div>
+                    <div class="contacts__contact-info">ruventhemes.com</div>
+                </div>
+                <div class="contacts__contact">
+                    <div class="contacts__contact-name">{{email}}</div>
+                    <div class="contacts__contact-info">hello@example.com</div>
+                </div>
+            </div>
+            <div class="profile">
+                <div class="personal-data">
+                    <div class="personal-data__name">desmond</div>
+                    <div class="personal-data__surname">rambowski</div>
+                    <div class="personal-data__profession">Web Developer & Front-end Expert</div>
+                    <div class="personal-data__links">
+                        <a class="personal-data__link" href="#"><i
+                                class="personal-data__link-icon fab fa-facebook-f"></i></a>
+                        <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-dribbble"></i></a>
+                        <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
