--- a/webapp/src/views/index.html
+++ b/webapp/src/views/index.html
@@ -9,13 +9,18 @@
 <body>
 
 <!-- LOCALS -->
-<div class="container">
-    <div id="language-switcher" class="locals">
-        {{#each locals}}
-        <div class="locals__language-btn {{#if this.active}}locals__language-btn_active{{/if}}"
-             data-local="{{this.local}}">{{this.name}}
+<div class="locals-container container clearfix">
+    <div class="section">
+        <div class="section__header"></div>
+        <div class="section__content">
+            <div id="language-switcher" class="locals">
+                {{#each locals}}
+                <div class="locals__language-btn {{#if this.active}}locals__language-btn_active{{/if}}"
+                     data-local="{{this.local}}">{{this.name}}
+                </div>
+                {{/each}}
+            </div>
         </div>
-        {{/each}}
     </div>
 </div>
 
@@ -138,8 +143,8 @@
 <div class="contact-container container">
     <div class="section">
         <div class="section__header">
-            <div class="section__header-title">desmond</div>
-            <div class="section__header-description">desmond</div>
+            <div class="section__header-title">{{contact.title}}</div>
+            <div class="section__header-description">{{contact.description}}</div>
         </div>
         <div class="section__content">
             <div class="contacts">
@@ -166,8 +171,9 @@
                     <div class="personal-data__surname">rambowski</div>
                     <div class="personal-data__profession">Web Developer & Front-end Expert</div>
                     <div class="personal-data__links">
-                        <a class="personal-data__link" href="#"><i
-                                class="personal-data__link-icon fab fa-facebook-f"></i></a>
+                        <a class="personal-data__link" href="#">
+                            <i class="personal-data__link-icon fab fa-facebook-f"></i>
+                        </a>
                         <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-dribbble"></i></a>
                         <a class="personal-data__link" href="#"><i class="personal-data__link-icon fab fa-twitter"></i></a>
                     </div>
