--- a/webapp/src/scss/components/_timelines.scss
+++ b/webapp/src/scss/components/_timelines.scss
@@ -8,6 +8,7 @@
   padding-left: 15px;
   color: $color-text-main;
   line-height: 1.75;
+  font-size: 1rem;
 
   &__point {
     box-shadow: 0 0 0 10px $color-primary;
